%% Azure Table Storage schema (Azurite locally). Table Storage has no server-side joins —
%% "relationships" are key conventions resolved by the repositories. Index bounds: every
%% query is PartitionKey-scoped; RowKey encodes ordering (ULID / inverted ticks).
erDiagram
    MODELS ||--o{ DUELS_LEFT : "LeftModelId"
    MODELS ||--o{ DUELS_RIGHT : "RightModelId"
    DUELS ||--o{ DUEL_RESULTS : "PK = DuelId (2 rows per duel)"
    MODELS ||--o{ DUEL_RESULTS : "RK = ModelId"
    MODELS ||--o{ ELO_HISTORY : "PK = ModelId"
    DUELS ||--o{ ELO_HISTORY : "RK suffix = DuelId"

    MODELS {
        string PartitionKey PK "constant 'model' — single-partition registry scan"
        string RowKey PK "ModelId"
        string DisplayName "1-100 chars"
        string ModelType "Local | Remote | LocalService (string enum)"
        double CurrentElo "denormalized, start 1200"
        int DuelCount
        int WinCount
        double GreenScoreAvg
        double TdpWatts "Local only — required > 0"
        string WebLlmModelId "Local only"
        string ApiEndpointRef "Remote deployment / Ollama model name"
        decimal InputTokenPricePerMillion "Remote only"
        decimal OutputTokenPricePerMillion "Remote only"
        datetime CreatedAt
        string ETag "If-Match optimistic concurrency"
    }

    DUELS {
        string PartitionKey PK "YYYYMM derived from ULID timestamp — month-bucketed archive paging"
        string RowKey PK "DuelId (ULID, lexicographically time-ordered)"
        string PromptText
        string PromptFull
        string LeftModelId FK
        string RightModelId FK
        datetime StartedAt
        datetime CompletedAt "nullable"
        string Verdict "Pending | LeftWins | RightWins | ... (string enum)"
        string WinnerModelId "nullable"
        string LoserModelId "nullable"
        double EloShiftWinner "nullable"
        double EloShiftLoser "nullable"
        datetime VerdictDeadline "StartedAt + 24h — Auto-Judge eligible after"
        bool IsPartial "true when only one model completed"
        string ETag "If-Match; 412 -> re-read + reapply"
    }

    DUEL_RESULTS {
        string PartitionKey PK "DuelId — point query returns both fighters"
        string RowKey PK "ModelId"
        long WarmUpDurationMs
        long GenerationDurationMs
        long TotalDurationMs
        int TokenCount
        double TokenVelocity "tokens per second"
        string HtmlOutputRaw "normalized HTML"
        long HtmlOutputSizeBytes
        double CharacterDensityRatio
        int OutputQualityScore
        bool IsFailure
        string FailureReason "nullable"
        double EnergyWh "Local only"
        double EnergyCostUsd "Local only"
        double GreenScore "Local only — tokens per Wh"
        double ApiCostUsd "Remote only"
    }

    ELO_HISTORY {
        string PartitionKey PK "ModelId — per-model sparkline scan"
        string RowKey PK "{maxTicks - RecordedAt.Ticks:D19}_{DuelId} — newest first"
        string DuelId FK
        double EloBefore
        double EloAfter
        double EloShift
        string Outcome "Win | Loss"
        string OpponentModelId FK
        double OpponentEloBefore
        datetime RecordedAt "immutable ledger row"
    }
